Document PPDG/src/objects/Weekly_Direct_Sales_Control_Log__c.object
<CustomObject>
    <fields>
        <fullName>All_checks_carried_out__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>All checks carried out</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Weekly_Direct_Sales_Control_Log2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>By_whom__c</fullName>
        <label>By whom</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed_by1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Weekly_Direct_Sales_Control_Log1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Weekly_Direct_Sales_Control_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_from_bank_BI_for_FIT_account__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Data from bank BI for FIT account</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date1__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCU_KYC_and_Senior_management_informed__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>FCU, KYC and Senior management informed</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finding_Comments__c</fullName>
        <label>Finding-Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Finding_comments1__c</fullName>
        <label>Finding-Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_no_comments1__c</fullName>
        <label>If no comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_no_comments2__c</fullName>
        <label>If no comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_no_comments3__c</fullName>
        <label>If no comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Missed_by__c</fullName>
        <label>Missed by</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PEP_High_Risk_and_High_worth_account__c</fullName>
        <label>PEP, High Risk and High worth account</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signed__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Signed</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signed_and_filled_by_team__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Signed and filled by team</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tuesday_Cascade_printed_signed__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Tuesday Cascade printed/ signed</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Uploaded_to_Salesforce__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Uploaded to Salesforce</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wednesday_training__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Wednesday training</label>
        <type>Picklist</type>
    </fields>
    <label>Weekly Direct Sales Control Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Weekly Direct Sales Control Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weekly Direct Sales Control Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>